// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChoiceGroup /> when \`props.selectedKey\` is set renders as expected 1`] = `
<StyledCustomizedChoiceGroup
  className="y-choice-group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "A",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option A",
      },
      Object {
        "key": "B",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option B",
      },
    ]
  }
  selectedKey="B"
  styles={[Function]}
/>
`;

exports[`<ChoiceGroup /> with minimal props option styled as expected 1`] = `
Object {
  "field": Object {
    "paddingLeft": "2.6rem",
    "selectors": Object {
      ":before": Object {
        "borderColor": "#dde0e6",
        "borderWidth": "1px",
      },
    },
  },
  "root": Object {
    "marginBottom": "1.2rem",
    "minHeight": 0,
  },
}
`;

exports[`<ChoiceGroup /> with minimal props renders as expected 1`] = `
<StyledCustomizedChoiceGroup
  className="y-choice-group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "A",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option A",
      },
      Object {
        "key": "B",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option B",
      },
    ]
  }
  styles={[Function]}
/>
`;

exports[`<ChoiceGroup /> with minimal props styled as expected 1`] = `
Object {
  "label": Object {
    "color": "#495361",
    "fontSize": "1.4rem",
    "fontWeight": "600",
    "paddingBottom": "0.4rem",
  },
}
`;

exports[`<ChoiceGroup /> with minimal props sublabel renders as expected 1`] = `
<React.Fragment>
  <CustomizedText
    bold={true}
  >
    Sublabel for A
    : 
  </CustomizedText>
   
  Option A
</React.Fragment>
`;

exports[`<ChoiceGroup /> with minimal props when a change is triggered with an option renders as expected 1`] = `
<StyledCustomizedChoiceGroup
  className="y-choice-group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "A",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option A",
      },
      Object {
        "key": "B",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option B",
      },
    ]
  }
  styles={[Function]}
/>
`;

exports[`<ChoiceGroup /> with minimal props when a change is triggered with an option that is \`undefined\` renders as expected 1`] = `
<StyledCustomizedChoiceGroup
  className="y-choice-group"
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "A",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option A",
      },
      Object {
        "key": "B",
        "onRenderLabel": [Function],
        "styles": [Function],
        "text": "Option B",
      },
    ]
  }
  styles={[Function]}
/>
`;

exports[`<ChoiceGroup /> with minimal props when checked, option styled as expected 1`] = `
Object {
  "field": Object {
    "paddingLeft": "2.6rem",
    "selectors": Object {
      ":before": Object {
        "borderColor": "#6c98d9",
        "borderWidth": "2px",
      },
    },
  },
  "root": Object {
    "marginBottom": "1.2rem",
    "minHeight": 0,
  },
}
`;
